--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 							<article id="intro">
 								<h2 class="major">Intro</h2>
 								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<p>I have always had a passion for challenges and solving problems. I have been teaching mathematics for 16 years while also dabbling in programming. I finally took the leap to formally study software engineering and have no regrets. Check out my <a href="#work">awesome work</a>.</p>
+								<p>TrueCoders has given me the opportunity to study full stack engineering with C#. My skills have improved dramatically and I have enjoyed every challenge. I hope to expand my skills with multiple languages while developing expertise in technical abilities.</p>
 							</article>
 
 						<!-- Work -->
@@ -63,7 +63,9 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>Lorem ipsum dolor sit amet, consectetur et adipiscing elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices. Aliquam libero et malesuada fames ac ante ipsum primis in faucibus. Cras viverra ligula sit amet ex mollis mattis lorem ipsum dolor sit amet.</p>
+								<p>I am Robert Rogers. Robert is a 16 year veteran in education. He has been inspiring and impacting the future of students through mathematics and statistics. Creating and solving problems has been a passion.</p>
+								<p>As a lifetime learner, Robert is always eager to learn new topics, strategies, and techniques to improve the quality of his work. He enjoys implimenting quality professional development and teaching what he has learned. He has taken the drive to improve the mathematics departments of two high schools by increasing state scores and mentoring students to pursue high education. Robert has been awarded Teacher of the Year for the 2021-2022 school year.</p>
+								<p>Robert is seeking larger challenges and problems to solve. He wants to take his experience and skills and apply them in a way to improve the quality of life for others.</p>
 							</article>
 
 						<!-- Contact -->
