--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/pic03.jpg" alt="" /></span>
-								<p>I am Robert Rogers. Robert is a 16 year veteran in education. He has been inspiring and impacting the future of students through mathematics and statistics. Creating and solving problems has been a passion.</p>
-								<p>As a lifetime learner, Robert is always eager to learn new topics, strategies, and techniques to improve the quality of his work. He enjoys implimenting quality professional development and teaching what he has learned. He has taken the drive to improve the mathematics departments of two high schools by increasing state scores and mentoring students to pursue high education. Robert has been awarded Teacher of the Year for the 2021-2022 school year.</p>
+								<p>I am Robert Rogers. Robert is a 16 year veteran in education. He has been inspiring and impacting the future of students through advanced mathematics and statistics. Creating and solving problems has been a passion.</p>
+								<p>As a lifetime learner, Robert is always eager to learn new topics, strategies, and techniques to improve the quality of his work. He enjoys implementing quality professional development and teaching what he has learned. He has taken the drive to improve the mathematics departments of two high schools by increasing state scores and mentoring students to pursue high education. Robert has been awarded Teacher of the Year for the 2021-2022 school year.</p>
 								<p>Robert is seeking larger challenges and problems to solve. He wants to take his experience and skills and apply them in a way to improve the quality of life for others.</p>
 							</article>
 
