--- a/index.html
+++ b/index.html
@@ -56,8 +56,17 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<h4>CRUD Database Website</h4>
+								<li><a href="https://github.com/rerogers2/baseballcards">Github Repository</a></li>
+								<a href="https://drive.google.com/file/d/1-pvvsmh2dqAs9MzAc9SSy4yjSwqtwv5y/view?usp=drive_link">Video of Application</a>
+								<p>This started as a personal project and turned into a CRUD application for my baseball card collection. I implement multiple searches to find cards, insert and delete cards into the collection, and edit the total amount of a card as needed. The search provides two totals; a total number of cards owned and total number of unique cards of that type.
+								I used CMV design to create the web application with C# and CSHTML. The baseball cards are stored in MySQL with SQL commands to sort and search.</p>
+								<h4>CSV Parsing and Geolocation</h4>
+								<li><a href="https://github.com/rerogers2/TacoParser">Github Repository</a></li>
+								<p>This application takes a list of Taco Bell locations with coordinate points and finds the two furthest locations. The distance uses a Geolocation to account for the curvature of earth over the distances.</p>
+								<h4>KanyeREST</h4>
+								<li><a href="https://github.com/rerogers2/APIs-and-JSON-Exercise">Github Repository</a></li>
+								<p>An application that simulates a conversation between Kanye West and Ron Swanson through API calls. This application uses the Newtonsoft.JSON NuGet package to call the Kanye URL and parse the data. It also makes a call to the Swanson API and parses the JSON array in order to continue the conversation.</p>
 							</article>
 
 						<!-- About -->
