--- a/index.html
+++ b/index.html
@@ -20,14 +20,15 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-gem"></span>
+							<!--<span class="icon fa-gem"></span>-->
+							<i class="fas fa-dragon" style="font-size:48px;<!--color:blue;-->"></i>
 						</div>
 						<div class="content">
 							<div class="inner">
 								<h1>Robert Rogers</h1>
 								<!--<p>A fully responsive site template designed by <a href="https://html5up.net">HTML5 UP</a> and released<br />
 								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>-->
-								<p>Leader. Lifetime learner. Mentor. Problem solver.</p>
+								<p>Leader. Mentor. Problem solver.</p>
 							</div>
 						</div>
 						<nav>
@@ -47,7 +48,7 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/pic01.jpg" alt="" /></span>
+								<span class="image main"><img src="images/problem-solver2.png" alt="" /></span>
 								<p>I have always had a passion for challenges and solving problems. I have been teaching mathematics for 16 years while also dabbling in programming. I finally took the leap to formally study software engineering and have no regrets. Check out my <a href="#work">awesome work</a>.</p>
 								<p>TrueCoders has given me the opportunity to study full stack engineering with C#. My skills have improved dramatically and I have enjoyed every challenge. I hope to expand my skills with multiple languages while developing expertise in technical abilities.</p>
 							</article>
@@ -55,7 +56,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/dragon2.jpg" alt="" /></span>
 								<h4>CRUD Database Website</h4>
 								<li><a href="https://github.com/rerogers2/baseballcards">Github Repository</a></li>
 								<a href="https://drive.google.com/file/d/1-pvvsmh2dqAs9MzAc9SSy4yjSwqtwv5y/view?usp=drive_link">Video of Application</a>
@@ -65,7 +66,7 @@
 								<li><a href="https://github.com/rerogers2/TacoParser">Github Repository</a></li>
 								<p>This application takes a list of Taco Bell locations with coordinate points and finds the two furthest locations. The distance uses a Geolocation to account for the curvature of earth over the distances.</p>
 								<h4>KanyeREST</h4>
-								<li><a href="https://github.com/rerogers2/APIs-and-JSON-Exercise">Github Repository</a></li>
+								<li><a href="https://github.com/rerogers2/APIs-and-JSON-Exercise">Github Repository</a>
 								<p>An application that simulates a conversation between Kanye West and Ron Swanson through API calls. This application uses the Newtonsoft.JSON NuGet package to call the Kanye URL and parse the data. It also makes a call to the Swanson API and parses the JSON array in order to continue the conversation.</p>
 							</article>
 
