--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/RRogers1.jpg" alt="" /></span>
+								<span class="image main2"><img src="images/RRogers1.jpg" alt="" /></span>
 								<p>I am Robert Rogers. Robert is a 16 year veteran in education. He has been inspiring and impacting the future of students through advanced mathematics and statistics. Creating and solving problems has been a passion.</p>
 								<p>As a lifetime learner, Robert is always eager to learn new topics, strategies, and techniques to improve the quality of his work. He enjoys implementing quality professional development and teaching what he has learned. He has taken the drive to improve the mathematics departments of two high schools by increasing state scores and mentoring students to pursue high education. Robert has been awarded Teacher of the Year for the 2021-2022 school year.</p>
 								<p>Robert is seeking larger challenges and problems to solve. He wants to take his experience and skills and apply them in a way to improve the quality of life for others.</p>
@@ -82,7 +82,9 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" <!--action="#"--> action="https://formspree.io/f/xeqbaeqa">
+								<form 
+									  action="https://formspree.io/f/xeqbaeqa"
+									  method="post" >
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -106,7 +108,7 @@
 									<!--<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>-->
-									<li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://github.com/rerogers2" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
 							</article>
 
